Fixed rig button spacing.
git-svn-id: https://develop.eng.uts.edu.au/projects/personal/sahara/svn/WI/trunk@2416 7ee224fa-57ca-4419-87f9-1f4314938d77

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -95,6 +95,10 @@
 	text-align: center;
 }
 
+.statusstring {
+	font-weight: bold;
+}
+
 .riglist {
 	list-style: none;
 	width: 100%;
@@ -110,7 +114,7 @@
 	width: 75px;
 	height: 75px;
 	text-decoration: none;
-	margin: 10px;
+	margin: 5px;
 	text-align: center;
 	border: 1px solid #B5B5B5;
 	background-color: #EFEFEF;
